src/test/deca/codegen/valid/Objets/Heredite3.deca
class A {
   int x = 1;
}

class B extends A {

    int x = 2;

}

{
  B b = new B();
  println("b.x = ", b.x);
}
