src/test/deca/codegen/invalid/Objets/Heredite.deca
class A {
   int x = 1;
}

class B extends A {
    int y = 2;

}


{
  A a = new A();

  B b = (B)(a);

  print(b.y);

}
